--- a/config.ini
+++ b/config.ini
@@ -4,6 +4,20 @@ password = 123456
 port = 3306
 username = root
 
+[SystemDeviceSet]
+NumberOfChannels=2
+CarNum=1
+Gate=1
+IcCard=1
+Weigh=1
+ECarNum=1
+Container=0
+Led=1
+RedGreenLight=1
+LedTop=1
+Voice=1
+Radar=0
+
 [Server]
 ip = 127.0.0.1
 port = 8080
@@ -24,3 +38,26 @@ Prot_808 = 80
 Tmp = /tmp/IPC
 Montage = Montage
 
+[FTP]
+FTP_user = ftpuser
+FTP_pass =123456
+FTP_port = 
+FTP_IP = 129.211.172.129
+Local_path = ./
+Remot_path = ./
+
+[ECarNum]
+Ip=192.168.1.18
+Port=1969
+HostIp=192.168.1.10
+HostPort=25011
+ECarNum_Antenna1=1
+ECarNum_Antenna2=1
+ECarNum_Antenna3=1
+ECarNum_Antenna4=1
+
+[IcCard]
+Port=51003
+
+[Communication]
+DoubleICCard=1
